--- a/css/index.css
+++ b/css/index.css
@@ -255,15 +255,26 @@ nav {
     font-family: "Montserrat", sans-serif;
     font-weight: 650;
     line-height: 1.2;
-    margin: 0;
-    padding: 5rem 0 5rem 0;
+    margin-bottom:53px;
+    padding:2rem;
     text-align: center;
+}
+
+.services_section_heading{
+        font-size: 4rem;
+            font-family: "Montserrat", sans-serif;
+            font-weight: 650;
+            line-height: 1.2;
+            margin-top:-38px;
+            margin-bottom: 45px;
+            padding: 2rem;
+            text-align: center;
 }
 
 .sec-content-div {
     font-size: 2rem;
     /*text-align: start;*/
-    padding: 0 2rem 5rem 2rem;
+    padding: 1px 2rem 5rem 2rem;
     width: auto;
     justify-content: space-around;
     max-width: 150rem;
@@ -291,10 +302,10 @@ nav {
     /*background-color: #fafafa;*/
     width: 32rem;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    border-radius: 0.5rem;
+    border-radius: 1.5rem;
     transition: all 0.2s;
     padding: 1rem;
-    margin: 1.5rem;
+    margin: 0.5rem;
 }
 
 @media (max-width: 680px) {
@@ -435,7 +446,7 @@ input[type="email"] {
         
                 .about-section {
                     position: relative;
-                    padding: 120px 0px;
+                    padding: 50px 0px;
                 }
         
                 .about-section .content-column {
@@ -445,13 +456,11 @@ input[type="email"] {
         
                 .about-section .content-column .inner-column {
                     position: relative;
-                    padding-top: 50px;
+                    padding-top: 10px;
                     /*padding-right: 100px;*/
                     display: flex;
                     flex-direction: column;
                     justify-content: center !important;
-                    align-content: center !important;
-                    align-items: center !important;
                 }
         
                 .about-section .content-column .text {
@@ -482,7 +491,8 @@ input[type="email"] {
         
                 .about-section .image-column .inner-column {
                     position: relative;
-                    padding: 40px 40px 0px 0px;
+                    /*padding: 40px 40px 0px 0px;*/
+                    margin-top: 115px;
                     margin-left: 50px;
                 }
         
