--- a/css/index.css
+++ b/css/index.css
@@ -10,12 +10,12 @@
     scroll-behavior: smooth;
 }
 
+
 /*** Hero text animation ***/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600");
 
 :root {
     --bar-scale-y: 0;
-    --sparkle-color: rgb(253 244 215 / 40%);
 }
 
 @keyframes pop-word {
@@ -73,7 +73,23 @@ h1 {
     transform: rotateX(120deg);
     transform-origin: 50% 100%;
 }
+/*
+h1:hover{
+    animation: show 1s forwards, pop-word 1.5s forwards;
+    opacity: 0;
+    transform: rotateX(120deg);
+    transform-origin: 50% 100%;
+} */
 /* End */
+
+
+
+/* Hero Button Animation  */
+
+/* End */
+
+
+
 
 body {
     margin: 0;
@@ -331,6 +347,9 @@ nav {
     background-color: #040436;
     color:white;
     cursor: pointer;
+    transform: translate(10px, 10px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    transition: all 0.2s;
 }
 
 .btn:active {
