--- a/css/index.css
+++ b/css/index.css
@@ -153,16 +153,19 @@ body {
         max-width: 75rem;
     }
 }
-
+.navbar{
+    max-height: 110px;
+}
 #header-img {
-    height: 9.5rem;
-    width: auto;
+    height: 12.5rem;
+    width: 13rem;
     margin-left: 40px;
 }
 
 @media (max-width: 800px) {
     #header-img {
-        height: 8.5rem;
+        height: 9.5rem;
+        width: 10rem;
     }
 }
 
